# CharMorphExpansion

./: README.md
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/charmorph/app/: CharMorphApp.kt  MainActivity.kt  MainViewModel.kt  Navigation.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/asset-base/: build.gradle.kts
android/asset-base/src/main/: AndroidManifest.xml
android/asset-base/src/main/java/com/charmorph/asset/: TestAssetGenerator.kt
android/core-model/: build.gradle.kts
android/core-model/src/main/: AndroidManifest.xml
android/feature-photo-import/: build.gradle.kts
android/ingest-pipeline/: build.gradle.kts
android/ingest-pipeline/src/main/: AndroidManifest.xml
android/ingest-pipeline/src/main/java/com/charmorph/ingest/: AssetImporter.kt  GltfSkeletonStub.kt  ObjParser.kt
android/ml-engine/: build.gradle.kts
android/ml-engine/src/main/: AndroidManifest.xml
android/native-bridge/: build.gradle.kts
android/native-bridge/src/main/: AndroidManifest.xml
android/native-bridge/src/main/cpp/: CMakeLists.txt  assimp_bridge.cpp  charmorph_native.cpp
android/preview-renderer/: build.gradle.kts
android/preview-renderer/src/main/: AndroidManifest.xml
android/storage/: build.gradle.kts
android/storage/src/main/: AndroidManifest.xml
docs/: android_ingestion_design.md  universal_skeleton_morphing_toolset.md
lib/: charlib.py  xml_base_mesh.py
webapp/: __init__.py  processing.py  server.py
(+42 files in other folders)
